--- a/src/module/Menu.form
+++ b/src/module/Menu.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="module.Menu">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="8" y="358" width="393" height="621"/>
@@ -16,7 +16,7 @@
     <children>
       <component id="33075" class="javax.swing.JButton" binding="exitButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="50"/>
           </grid>
         </constraints>
@@ -62,13 +62,23 @@
           <background color="-16187648"/>
           <enabled value="true"/>
           <foreground color="-2304"/>
-          <hideActionText value="true"/>
+          <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <text value="Start Game"/>
         </properties>
         <clientProperties>
           <hideActionText class="java.lang.Boolean" value="false"/>
         </clientProperties>
+      </component>
+      <component id="d4825" class="javax.swing.JButton" binding="scoreboardButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="200" height="50"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Scoreboard"/>
+        </properties>
       </component>
     </children>
   </grid>
