--- a/src/module/Menus/ScoreBoardMenu.form
+++ b/src/module/Menus/ScoreBoardMenu.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="module.ScoreBoardMenu">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="module.Menus.ScoreBoardMenu">
   <grid id="27dc6" binding="panel" custom-create="true" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
@@ -10,11 +10,12 @@
     </properties>
     <border type="none"/>
     <children>
-      <component id="630b4" class="javax.swing.JLabel" binding="ImageLabel" custom-create="true">
+      <component id="630b4" class="javax.swing.JLabel" binding="ImageLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <enabled value="false"/>
           <text value=""/>
         </properties>
       </component>
