+ added Exception class for the proper displaying of the scoreboard(ScoreBoardEmptyException) and some other minor tweaks

--- a/src/module/Menus/ScoreBoardMenu.form
+++ b/src/module/Menus/ScoreBoardMenu.form
@@ -28,7 +28,9 @@
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="0" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="false"/>
+        </properties>
       </component>
     </children>
   </grid>
