--- a/src/module/Menus/OptionsMenu.form
+++ b/src/module/Menus/OptionsMenu.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="module.Menus.OptionsMenu">
-  <grid id="27dc6" binding="jpanel" layout-manager="GridLayoutManager" row-count="7" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="jpanel" layout-manager="GridLayoutManager" row-count="8" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="42" y="20" width="478" height="400"/>
+      <xy x="42" y="20" width="478" height="426"/>
     </constraints>
     <properties>
       <background color="-1180929"/>
@@ -18,7 +18,7 @@
     <children>
       <component id="10a09" class="javax.swing.JTextPane" binding="sizeOfTheFieldTextPane" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="20"/>
           </grid>
         </constraints>
@@ -31,7 +31,7 @@
       </component>
       <component id="52" class="javax.swing.JTextPane" binding="newTilesAfterEveryTextPane" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="20"/>
           </grid>
         </constraints>
@@ -42,7 +42,7 @@
       </component>
       <component id="3ed88" class="javax.swing.JSlider" binding="spawnSlider">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="true"/>
@@ -56,13 +56,13 @@
           <paintLabels value="true"/>
           <paintTicks value="true"/>
           <snapToTicks value="true"/>
-          <value value="1"/>
+          <value value="3"/>
           <valueIsAdjusting value="true"/>
         </properties>
       </component>
       <component id="ed992" class="javax.swing.JLabel" binding="ImageLabel" custom-create="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value=""/>
@@ -70,7 +70,7 @@
       </component>
       <component id="b2162" class="javax.swing.JSlider" binding="sizeSlider">
         <constraints>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <inverted value="false"/>
@@ -85,7 +85,7 @@
       </component>
       <component id="1fa51" class="javax.swing.JSlider" binding="rangeSlider">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="true"/>
@@ -97,18 +97,26 @@
           <paintLabels value="true"/>
           <paintTicks value="true"/>
           <snapToTicks value="true"/>
-          <value value="4"/>
+          <value value="10"/>
         </properties>
       </component>
       <component id="c02f7" class="javax.swing.JTextPane" binding="rangeOfValuesThatTextPane" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="1" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="20"/>
           </grid>
         </constraints>
         <properties>
           <font name="BankGothic Lt BT"/>
           <text value="Range of Values that can spawn:"/>
+        </properties>
+      </component>
+      <component id="363db" class="javax.swing.JButton" binding="backButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Back"/>
         </properties>
       </component>
     </children>
