--- a/src/module/Menus/OptionsMenu.form
+++ b/src/module/Menus/OptionsMenu.form
@@ -113,9 +113,12 @@
       </component>
       <component id="363db" class="javax.swing.JButton" binding="backButton" default-binding="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
+          <hideActionText value="false"/>
+          <horizontalAlignment value="0"/>
+          <horizontalTextPosition value="4"/>
           <text value="Back"/>
         </properties>
       </component>
