--- a/src/module/Menus/Menu.form
+++ b/src/module/Menus/Menu.form
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="module.Menus.Menu">
-  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="7" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
+  <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="50" vgap="10">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="33" y="147" width="404" height="621"/>
     </constraints>
     <properties>
       <background color="-720907"/>
+      <doubleBuffered value="true"/>
       <enabled value="true"/>
+      <focusCycleRoot value="true"/>
+      <foreground color="-16777216"/>
     </properties>
     <border type="empty" title="" title-position="2">
       <font/>
@@ -16,7 +19,7 @@
     <children>
       <component id="33075" class="javax.swing.JButton" binding="exitButton" default-binding="true">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="6" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="50"/>
           </grid>
         </constraints>
@@ -32,7 +35,7 @@
       </component>
       <component id="55daa" class="javax.swing.JLabel" binding="label1" custom-create="true">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="0" height="144"/>
           </grid>
         </constraints>
@@ -42,7 +45,7 @@
       </component>
       <component id="fd902" class="javax.swing.JButton" binding="optionsButton" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="4" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="50"/>
           </grid>
         </constraints>
@@ -54,14 +57,14 @@
       </component>
       <component id="d5b3" class="javax.swing.JButton" binding="startGameButton" default-binding="true">
         <constraints>
-          <grid row="1" column="0" row-span="3" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="1" column="0" row-span="3" col-span="3" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="50"/>
           </grid>
         </constraints>
         <properties>
-          <background color="-16187648"/>
+          <background color="-2300695"/>
           <enabled value="true"/>
-          <foreground color="-2304"/>
+          <foreground color="-12828863"/>
           <hideActionText value="false"/>
           <horizontalAlignment value="0"/>
           <text value="Start Game"/>
@@ -72,7 +75,7 @@
       </component>
       <component id="d4825" class="javax.swing.JButton" binding="scoreboardButton" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+          <grid row="5" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="50"/>
           </grid>
         </constraints>
